# devlogs

./: .env.example  .gitignore  Dockerfile.collector  HOWTO-CLI.md  HOWTO-COLLECTOR-DEPLOY.md  HOWTO-COLLECTOR.md  HOWTO-DEVLOGS-FORMAT.md  HOWTO-JENKINS.md  HOWTO-MCP.md  HOWTO-UI.md  HOWTO.md  MIGRATION-V2.md  PROGRESS.md  PROMPT.md  PR_SUMMARY.md  README.md  build-standalone.sh  devlogs  docker-compose.example.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test-standalone.sh
.ishipped/: card.md
browser/: README.md  package-lock.json  package.json  rollup.config.js  tsconfig.json
devlogs/: __init__.py  cli.py  config.py  context.py  handler.py  rollup.py  scrub.py
docs/: build-info.md
dotnet/: .gitignore  Devlogs.sln  IMPLEMENTATION_SUMMARY.md  README.md  appsettings.example.json
go/: build_info.go  build_info_test.go  circuit_breaker.go  client.go  config.go  context.go  devlogs.go  devlogs_test.go  errors.go  formatter.go  go.mod  handler.go  levels.go
jenkins-plugin/: .gitignore  BUILD_ENVIRONMENT_NOTE.md  CHANGELOG.md  IMPLEMENTATION.md  PUBLISHING.md  QUICKSTART.md  README.md  build.sh  pom.xml  test.sh
publish/: RELEASING.md  publish-github.sh  publish-npm.sh  publish-pypi.sh  release.sh
scripts/: devlogs.sh  opensearch_down.sh  opensearch_init.sh  opensearch_up.sh
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_devlogs_client.py  test_handler.py  test_indexing.py  test_mcp_server.py  test_opensearch_client.py  test_opensearch_queries.py  test_rollup.py  test_scrub.py  test_web.py
(+87 files in other folders)
