[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devlogs"
version = "0.1.0"
description = "Developer-focused logging library for Python with OpenSearch integration."
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "devlogs"}]
dependencies = [
  "opensearch-py>=2.4.0",
  "typer>=0.9.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.24.0",
]

[project.scripts]
devlogs = "devlogs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
